@@ -2,14 +2,13 @@ package hu.bme.aut.haulagecompany.service;
 
 import hu.bme.aut.haulagecompany.model.Good;
 import hu.bme.aut.haulagecompany.model.dto.GoodDTO;
+import hu.bme.aut.haulagecompany.model.dto.VehicleDTO;
 import hu.bme.aut.haulagecompany.repository.GoodRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.*;
 import java.util.stream.StreamSupport;
 
 @Service
@@ -34,10 +33,10 @@ public class GoodService {
     public List<GoodDTO> getAllGoods() {
         return StreamSupport.stream(goodRepository.findAll().spliterator(), false)
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public GoodDTO getGoodById(Long id) {
+    public GoodDTO getGoodDTOById(Long id) {
         Optional<Good> good = goodRepository.findById(id);
         return good.map(this::convertToDTO).orElse(null);
     }
@@ -69,6 +68,13 @@ public class GoodService {
     }
 
     public List<Good> getGoodsByIds(List<Long> goodIDs) {
-        return StreamSupport.stream(goodRepository.findAllById(goodIDs).spliterator(), false).toList();
+        List<Optional<Good>> goodList = goodIDs.stream()
+                .map(goodRepository::findById)
+                .toList();
+        List<Good> realGoodList = new ArrayList<>();
+        for(Optional<Good> og : goodList){
+            og.ifPresent(realGoodList::add);
+        }
+        return realGoodList;
     }
 }
